<resources>
    <string name="app_name">Pa$$$afe</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_settings">Settings</string>
    <string name="register_prompt">Enter the password to be used to enter the application. It should include at least 8 characters.</string>
    <string name="coder_key_alias">__SECRET__</string>

    <string name="menu_list">Passwords</string>
    <string name="menu_add">Add new</string>
    <string name="menu_about">About</string>
    <string name="settings_title">Settings</string>

    <string name="prompt_password">Password</string>
    <string name="show_password">show password</string>
    <string name="record_save_btn">Save</string>
    <string name="record_add_btn">Save</string>

    <string name="rec_id_arg">ID</string>
    <string name="delete">Delete</string>
    <string name="old_password">Old password:</string>
    <string name="show_passwords">show_passwords</string>
    <string name="save_settings">Save settings</string>
    <string name="new_password">New password:</string>
    <string name="retype_new_password">Retype new password:</string>
    <string name="about">The product was developed and published by the single developer:\n\n
        Mikhail Pirozhkov\n\n
        Contacts for feedback and suggestions:\n
        pirozhkov.mixail@gmail.com</string>
    <string name="toggle_button"></string>
    <string name="ks_file_name">keys.ks</string>
</resources>
